  types, is now required to build the OCaml runtime system.
  (Xavier Leroy, review by David Allsopp and Sébastien Hinderer)

- #10915, #11039, #11057, #11095, #11190: Implement quality treatment for
  asynchronous actions in multicore. Reimplement the old behaviour of
  `caml_process_pending*` for multicore.
  (Guillaume Munch-Maccagnoni, review by Sadiq Jaffer and Gabriel Scherer)

- #11304: Fix data race on Windows file descriptors
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy, David Allsopp,
   and Sadiq Jaffer)

* #11337: pass 'flags' metadata to root scanners, to optimize stack
  scanning in the bytecode interpreter.
  Changes the interface of user-provided root-scanning hooks.
  (Gabriel Scherer, review by Xavier Leroy,
   Guillaume Munch-Maccagnoni, Sadiq Jaffer and Tom Kelly)

- #11144: Restore frame-pointers support for amd64
  (Fabrice Buoro, review by Frederic Bour and KC Sivaramakrishnan)

* #11255: in the C interface, `&Field(v, i)` now has type `volatile value *`
  instead of `value *` in OCaml 4.  This makes the memory model
  for mixed OCaml/C code better defined, but can cause warnings or type
  errors in user C code.
  (KC Sivaramakrishnan, review by Xavier Leroy, Gabriel Scherer and
  Guillaume Munch-Maccagnoni, additional discussions with Stephen
  Dolan and Luc Maranget)

- #5299, #4787, #11138, #11272: `Caml_state` is `NULL` when the domain lock is
  not held. This allows to test if the current thread holds the lock of its
  domain, and it makes it simpler to debug when one forgets to acquire
  the lock.
  (Guillaume Munch-Maccagnoni, review by Sadiq Jaffer, Xavier Leroy and
  Gabriel Scherer)

### Code generation and optimizations:

- #10972: ARM64 multicore support: OCaml & C stack separation;
  dynamic stack size checks; fiber and effects support.
  (Tom Kelly and Xavier Leroy, review by KC Sivaramakrishnan, Xavier Leroy
  Guillaume Munch-Maccagnoni, Eduardo Rafael, Stephen Dolan and
  Gabriel Scherer)
