@@ -24,7 +24,7 @@
         EXTRN  caml_apply2: NEAR
         EXTRN  caml_apply3: NEAR
         EXTRN  caml_program: NEAR
-        EXTRN  caml_array_bound_error: NEAR
+        EXTRN  caml_array_bound_error_asm: NEAR
        EXTRN  caml_stash_backtrace: NEAR
 
 INCLUDE domain_state64.inc
@@ -420,7 +420,7 @@ caml_callback3_asm:
         PUBLIC  caml_ml_array_bound_error
         ALIGN   16
 caml_ml_array_bound_error:
-        lea     rax, caml_array_bound_error
+        lea     rax, caml_array_bound_error_asm
         jmp     caml_c_call
 
         PUBLIC caml_system__code_end
